# cpp_knowledge_base

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  README.md  REVIEW.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker_build.sh  docker_run.sh
src/: CMakeLists.txt  main.cpp
src/algorithms/backtracking/: CMakeLists.txt
src/algorithms/backtracking/subsets/: CMakeLists.txt  README.md  subsets.cpp
src/cpp_idioms/: CMakeLists.txt
src/cpp_idioms/raii/: CMakeLists.txt
src/cpp_idioms/raii/shared_ptr/: CMakeLists.txt  README.md  shared_ptr.cpp
src/data_structures/cache/: CMakeLists.txt
src/data_structures/cache/lru_cache/: CMakeLists.txt  README.md  lru_cache.cpp
src/design_patterns/: CMakeLists.txt
src/design_patterns/abstract_factory/: CMakeLists.txt  README.md  abstract_factory.cpp
src/design_patterns/adapter/: CMakeLists.txt  README.md  adapter.cpp
src/design_patterns/bridge/: CMakeLists.txt  README.md  bridge.cpp
src/design_patterns/builder/: CMakeLists.txt  README.md  builder.cpp
src/design_patterns/chain_of_responsibility/: CMakeLists.txt  README.md  chain_of_responsibility.cpp
src/design_patterns/command/: CMakeLists.txt  README.md  command.cpp
src/design_patterns/composite/: CMakeLists.txt  README.md  composite.cpp
src/design_patterns/decorator/: CMakeLists.txt  README.md  decorator.cpp
src/design_patterns/facade/: CMakeLists.txt  README.md  facade.cpp
src/design_patterns/factory_method/: CMakeLists.txt  README.md  factory_method.cpp
src/design_patterns/flyweight/: CMakeLists.txt  README.md  flyweight.cpp
src/design_patterns/iteractor/: CMakeLists.txt  README.md  iterator.cpp
src/design_patterns/mediator/: CMakeLists.txt  README.md  mediator.cpp
src/design_patterns/memento/: CMakeLists.txt  README.md  memento.cpp
src/design_patterns/observer/: CMakeLists.txt  README.md  observer.cpp
src/design_patterns/prototype/: CMakeLists.txt  README.md  prototype.cpp
src/design_patterns/proxy/: CMakeLists.txt  README.md  proxy.cpp
src/design_patterns/singleton/: CMakeLists.txt  README.md  singleton.cpp
src/design_patterns/state/: CMakeLists.txt  README.md  state.cpp
src/design_patterns/strategy/: CMakeLists.txt  README.md  strategy.cpp
src/design_patterns/visitor/: CMakeLists.txt  README.md  visitor.cpp
