add_executable(chain_of_responsibility chain_of_responsibility.cpp)

target_compile_features(chain_of_responsibility PRIVATE cxx_std_20)
target_compile_options(chain_of_responsibility PRIVATE -Wall -Wextra -Wpedantic)

target_compile_options(chain_of_responsibility PRIVATE -fsanitize=address -fno-omit-frame-pointer)
target_link_options(chain_of_responsibility PRIVATE -fsanitize=address)